--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 </head>
 <body>
 
+
 <!--Start of NavBar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#"> <img src="images/RGB2.png" width="120" height="70">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <a class="navbar-brand" href="#"> <img src="images/RGB2.png" width="130" height="80">
 
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
