Added the quote and image section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!--Start of NavBar-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <a class="navbar-brand" href="#"> <img src="images/RGB2.png" width="130" height="80">
+    <a class="navbar-brand" href="#"> <img src="images/novoto_logo.png" width="130" height="70">
 
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -43,28 +43,52 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-                <a class="nav-link" href="index.html">Home  <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About us  </a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="#">Projects  </a>
+                <a class="nav-link" href="#">About us </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">  How are we Different?</a>
+                <a class="nav-link" href="#">Projects </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#"> How are we Different?</a>
             </li>
 
 
         </ul>
+
+        <ul class=navbar-nav>
+        <li class = "nav-item">
+            <button type="button" class="btn btn-outline-danger btn-lg">Contact Us</button>
+
+        </li>
+
+        </ul>
+
 
     </div>
 </nav>
 
 <!-- End of Nav-bar-->
 
+
+<!-- Start of image section -->
+
+
+<div class="container">
+    <img src="images/image1.jpg" class="center">
+
+    <br>
+
+
+    <h1 id="quote"> NOVOTO : Our world needs you </h1>
+
+
+</div>
+<!-- End of image section -->
 
 
 </body>
