--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <ul class=navbar-nav>
         <li class = "nav-item">
-            <button type="button" class="btn btn-outline-danger btn-lg">Contact Us</button>
+            <a href = "https://aniketgon1.typeform.com/to/GuPxci"> <button type="button" class="btn btn-outline-danger btn-lg">Contact Us</button></a>
 
         </li>
 
